--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "iconsax-react": "^0.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-to-print": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
